Section#Code-examples ISSUE: ico-moon example/audio player not showing [fixed] SOL?: wrap the audio-player in a tempoarary container for now
-Sticky header now showing

--- a/css/application.css
+++ b/css/application.css
@@ -657,7 +657,6 @@ div#code-examples div#code-examples-main-container div#problem-solution-selector
   padding: 0 5px;
   font-size: 1rem;
   font-weight: 600;
-  background-color: lightgray;
   color: #1a1a1a;
 }
 div#code-examples div#code-examples-main-container div#problem-solution-selector div#solutions-tags-container {
