--- a/scss/main-sections/_code-examples.scss
+++ b/scss/main-sections/_code-examples.scss
@@ -38,7 +38,6 @@ div#code-examples{
                     padding: 0 5px; 
                     font-size: 1rem; 
                     font-weight: 600; 
-                    background-color:lightgray; 
                     color: lighten(black, 10%);
                 }
             }
